--- a/TimeMonkey.Tray/TimeMonkey.Tray.csproj
+++ b/TimeMonkey.Tray/TimeMonkey.Tray.csproj
@@ -53,6 +53,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleKeyboardHook.cs" />
+    <Compile Include="SimpleMouseHook.cs" />
+    <Compile Include="WinAPI.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
