* init more dateils for hooks * some strucs * some values * init modifiers and eventargsw for mode detailed key info

--- a/TimeMonkey.Playgroud/TimeMonkey.Playgroud.csproj
+++ b/TimeMonkey.Playgroud/TimeMonkey.Playgroud.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +48,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TimeMonkey.Tray\TimeMonkey.Tray.csproj">
+      <Project>{e64aecea-41b6-4e93-999a-06ba6f6d3e5f}</Project>
+      <Name>TimeMonkey.Tray</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
